// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnvironmentFile synth EnvironmentFile.fromAsset synth matches snapshot 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "TaskDef_TaskRole_AssumeRolePolicy_8FE14147": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_ecs-tasks.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    },
    "aws_service_principal": {
      "aws_svcp_default_region_ecs-tasks": {
        "service_name": "ecs-tasks"
      }
    }
  },
  "provider": {
    "aws": [
      {}
    ]
  },
  "resource": {
    "aws_ecs_task_definition": {
      "TaskDef_54694570": {
        "container_definitions": "[{\\"essential\\":true,\\"image\\":\\"/aws/aws-example-app\\",\\"memory\\":512,\\"name\\":\\"Container\\",\\"environmentFiles\\":[{\\"type\\":\\"s3\\",\\"value\\":\\"arn:\${data.aws_partition.Partitition.partition}:s3:::\${aws_s3_bucket.AssetBucket.bucket}/\${aws_s3_object.FileAsset_S3.key}\\"}]}]",
        "family": "TaskDef",
        "network_mode": "bridge",
        "requires_compatibilities": [
          "EC2"
        ],
        "tags": {
          "Name": "Default-TaskDef",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "task_role_arn": "\${aws_iam_role.TaskDef_TaskRole_1EDB4A67.arn}"
      }
    },
    "aws_iam_role": {
      "TaskDef_TaskRole_1EDB4A67": {
        "assume_role_policy": "\${data.aws_iam_policy_document.TaskDef_TaskRole_AssumeRolePolicy_8FE14147.json}",
        "name_prefix": "g-TaskDefTaskRole",
        "tags": {
          "Name": "Default-TaskDef",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_s3_bucket": {
      "AssetBucket": {
        "bucket": "g-\${data.aws_caller_identity.CallerIdentity.account_id}-\${data.aws_region.Region.name}"
      }
    },
    "aws_s3_object": {
      "FileAsset_S3": {
        "bucket": "\${aws_s3_bucket.AssetBucket.bucket}",
        "key": "872561bf078edd1685d50c9ff821cdd60d2b2ddfb0013c4087e79bf2bb50724d.env",
        "source": "assets/Container_EnvironmentFile_Stage_3ED61EC8/872561bf078edd1685d50c9ff821cdd60d2b2ddfb0013c4087e79bf2bb50724d/test-envfile.env",
        "source_hash": "872561bf078edd1685d50c9ff821cdd60d2b2ddfb0013c4087e79bf2bb50724d"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.58.0"
      }
    }
  }
}"
`;

exports[`EnvironmentFile synth EnvironmentFile.fromBucket synth matches snapshot 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "TaskDef_TaskRole_AssumeRolePolicy_8FE14147": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_ecs-tasks.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    },
    "aws_service_principal": {
      "aws_svcp_default_region_ecs-tasks": {
        "service_name": "ecs-tasks"
      }
    }
  },
  "provider": {
    "aws": [
      {}
    ]
  },
  "resource": {
    "aws_ecs_task_definition": {
      "TaskDef_54694570": {
        "container_definitions": "[{\\"essential\\":true,\\"image\\":\\"/aws/aws-example-app\\",\\"memory\\":512,\\"name\\":\\"Container\\",\\"environmentFiles\\":[{\\"type\\":\\"s3\\",\\"value\\":\\"arn:\${data.aws_partition.Partitition.partition}:s3:::\${aws_s3_bucket.EnvFileBucket_1FCC7BB8.bucket}/env/test.env\\"}]}]",
        "family": "TaskDef",
        "network_mode": "bridge",
        "requires_compatibilities": [
          "EC2"
        ],
        "tags": {
          "Name": "Default-TaskDef",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "task_role_arn": "\${aws_iam_role.TaskDef_TaskRole_1EDB4A67.arn}"
      }
    },
    "aws_iam_role": {
      "TaskDef_TaskRole_1EDB4A67": {
        "assume_role_policy": "\${data.aws_iam_policy_document.TaskDef_TaskRole_AssumeRolePolicy_8FE14147.json}",
        "name_prefix": "g-TaskDefTaskRole",
        "tags": {
          "Name": "Default-TaskDef",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_s3_bucket": {
      "EnvFileBucket_1FCC7BB8": {
        "bucket_prefix": "g-envfilebucket",
        "tags": {
          "Name": "Default-EnvFileBucket",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.58.0"
      }
    }
  }
}"
`;
